--- a/package.json
+++ b/package.json
@@ -3,9 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "firebase": "^5.7.3",
+    "loadash": "^1.0.0",
+    "lodash": "^4.17.11",
+    "moment": "^2.23.0",
+    "moment-duration-format": "^2.2.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
-    "react-scripts": "2.1.3"
+    "react-redux": "^6.0.0",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "2.1.3",
+    "recharts": "^1.4.2",
+    "redux": "^4.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
