--- a/.eslintrc
+++ b/.eslintrc
@@ -4,6 +4,7 @@
   "rules": {
     "comma-dangle": ["error", { "objects": "never" }],
     "no-unused-vars": ["error", { "args": "none" }],
+    "browser": true,
     "react/jsx-filename-extension": [
       1,
       {
@@ -29,7 +30,8 @@
     "FormData": true,
     "FileReader": true,
     "Blob": true,
-    "navigator": true
+    "navigator": true,
+    "fetch": true
   },
   "parser": "babel-eslint"
 }
